# json2syntax

./: LICENSE  README.md  json_to_object.py  pyproject.toml  setup.cfg  setup.py
src/json2syntax/: json2syntax.py
src/json_to_object/: json_to_object.py
