[project]
name = "json2syntax"
version = "0.0.1"
authors = [
    {name="Justo Rodriguez Rondon", email = "justojavier@gmail.com"}
]
description = "Generates python classes from json files"
readme = "README.md"
requires+python = ">=3.7"

dependencies = [
    "pydantic",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/justojavier00/json_to_object"